--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 plugins {
-	id 'fabric-loom' version '1.1.+'
+	id 'fabric-loom' version '1.6.+'
 	id 'maven-publish'
 }
-
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -21,7 +18,7 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation 'xyz.nucleoid:plasmid:0.5+1.19.4-SNAPSHOT'
+	modImplementation 'xyz.nucleoid:plasmid:0.5.102-SNAPSHOT+1.20.4'
 }
 
 processResources {
@@ -34,11 +31,14 @@ processResources {
 
 tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
+	options.release = 17
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+java {
+	withSourcesJar()
+
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 jar {
